# openai-tests

./: .gitignore  .pre-commit-config.yaml  .safety-project.ini  AGENTS.md  LICENSE  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  package-lock.json  package.json  pymarkdown.json  pyproject.toml  renovate.json
.agents/: README.md
.github/workflows/: ci.yml  publish-pypi.yml  renovate.yml
docs/: asr-prep.md  asr-simple.md  asr-wer.md  cli.md  development.md  index.md  installation.md  integration.md  list-models.md  text-simple.md
scripts/: check_coverage.py  run_integration_tests.py  run_safety_scan.py  run_socket_scan.py
src/openai_tests/: __init__.py  cli.py  core.py  logging.py  registry.py
src/openai_tests/assets/: __init__.py
src/openai_tests/test_modules/: __init__.py  _shared.py  asr_prep.py  asr_simple.py  asr_wer.py  list_models.py  text_simple.py  whisper_english_normalizer.py
tests/: AGENTS.md  test_asr_prep.py  test_asr_simple.py  test_asr_wer.py  test_cli.py  test_core.py  test_integration_runner.py  test_list_models.py  test_logging.py  test_registry.py  test_socket_scan_runner.py  test_text_simple.py
tests/integration/: test_openai_endpoint.py
tests/integration/fixtures/: asr_simple.mp3.base64
